--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <h2 class="middle-heading">Some of my most recent <span class="heading-color">projects</span></h2>
        <div class="flex-container">
         <div  class="half-part">
-            <img src="img/hospital.jpg" alt="">
+            <img  id="hospital-img" src="img/hospital.jpg" alt="">
             <p>Hospital Management system</p>
             <a class="all-btn" target="_blank" href="">View Details</a>
         </div>
